# rust_bazel_cross_compile_example

./: .bazelrc  .gitignore  BUILD  Cargo.toml  MODULE.bazel  README.md  RUST_GO_INTEGRATION.md  build_and_run.sh  go.mod  rust.MODULE.bazel  settings.bzl
go_example/: BUILD  go.mod  main.go
java_example/: Arch.java  BUILD  RustLib.java
rust/core_lib/: BUILD  Cargo.toml
rust/core_lib/src/: lib.rs
rust/go_lib/: BUILD  Cargo.toml  README.md  go_lib.h
rust/go_lib/src/: lib.rs
rust/go_wrapper/: BUILD  Cargo.toml
rust/go_wrapper/src/: lib.rs
rust/hello_world/: BUILD  Cargo.toml  README.md
rust/hello_world/src/: main.rs
rust/jni_lib/: BUILD  Cargo.toml
rust/jni_lib/src/: lib.rs
rust/jni_wrapper/: BUILD  Cargo.toml
rust/jni_wrapper/src/: lib.rs
