[workspace]
resolver = "2"
members = [
    "rust/hello_world",
    "rust/core_lib",
    "rust/go_wrapper",
    "rust/jni_wrapper",
]

[workspace.package]
edition = "2024"
rust-version = "1.89.0"
readme = "README.md"

[workspace.dependencies]
# Internal crates
# External crates
mimalloc = "0.1.48"
tokio = "1.47.1"
libc = "0.2.175"
