"""
Root Bazel module configuration file that defines dependencies and external repositories.
"""

module(
    name = "rust_bazel_cross_compile_example",
    version = "0.1.0",
)
bazel_dep(name = "rules_rust", version = "0.64.0")
bazel_dep(name = "rules_go", version = "0.57.0")
bazel_dep(name = "rules_java", version = "8.12.0")
bazel_dep(name = "gazelle", version = "0.45.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "toolchains_llvm", version = "1.5.0")
#git_override(
#    module_name = "toolchains_llvm",
#    commit = "0bdeae25025aeb6f914db2a02cb2efeb302743b5",
#    remote = "https://github.com/bazel-contrib/toolchains_llvm.git",
#)

include("//:rust.MODULE.bazel")
