[package]
name = "go_wrapper"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true

[lib]
name = "go_lib"                      # Keep the same library name for compatibility
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Internal crates
core_lib = { workspace = true }
# External crates
libc = { workspace = true }
